--- a/result/2022-01-16.md
+++ b/result/2022-01-16.md
@@ -2,11 +2,11 @@
 2. [让正史成为全党全社会的共识](https://s.weibo.com//weibo?q=%23%E8%AE%A9%E6%AD%A3%E5%8F%B2%E6%88%90%E4%B8%BA%E5%85%A8%E5%85%9A%E5%85%A8%E7%A4%BE%E4%BC%9A%E7%9A%84%E5%85%B1%E8%AF%86%23&Refer=top) 1099937
 3. [微信加入语音消息暂停功能](https://s.weibo.com//weibo?q=%23%E5%BE%AE%E4%BF%A1%E5%8A%A0%E5%85%A5%E8%AF%AD%E9%9F%B3%E6%B6%88%E6%81%AF%E6%9A%82%E5%81%9C%E5%8A%9F%E8%83%BD%23&Refer=top) 948317
 4. [烫头的风险有多高](https://s.weibo.com//weibo?q=%23%E7%83%AB%E5%A4%B4%E7%9A%84%E9%A3%8E%E9%99%A9%E6%9C%89%E5%A4%9A%E9%AB%98%23&Refer=top) 884890
-5. [北京新增确诊为奥密克戎](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E6%96%B0%E5%A2%9E%E7%A1%AE%E8%AF%8A%E4%B8%BA%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 799366
-6. [正佳广场](https://s.weibo.com//weibo?q=%23%E6%AD%A3%E4%BD%B3%E5%B9%BF%E5%9C%BA%23&Refer=top) 596600
-7. [女子1100元假币骗残疾老人半扇猪肉](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%901100%E5%85%83%E5%81%87%E5%B8%81%E9%AA%97%E6%AE%8B%E7%96%BE%E8%80%81%E4%BA%BA%E5%8D%8A%E6%89%87%E7%8C%AA%E8%82%89%23&Refer=top) 545609
-8. [因发放中国制造的口罩佩洛西被称通共](https://s.weibo.com//weibo?q=%E5%9B%A0%E5%8F%91%E6%94%BE%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A0%E7%9A%84%E5%8F%A3%E7%BD%A9%E4%BD%A9%E6%B4%9B%E8%A5%BF%E8%A2%AB%E7%A7%B0%E9%80%9A%E5%85%B1&Refer=top) 541938
-9. [广州天河排除一起核酸检测结果异常](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%A4%A9%E6%B2%B3%E6%8E%92%E9%99%A4%E4%B8%80%E8%B5%B7%E6%A0%B8%E9%85%B8%E6%A3%80%E6%B5%8B%E7%BB%93%E6%9E%9C%E5%BC%82%E5%B8%B8%23&Refer=top) 535389
+5. [因发放中国制造的口罩佩洛西被称通共](https://s.weibo.com//weibo?q=%E5%9B%A0%E5%8F%91%E6%94%BE%E4%B8%AD%E5%9B%BD%E5%88%B6%E9%80%A0%E7%9A%84%E5%8F%A3%E7%BD%A9%E4%BD%A9%E6%B4%9B%E8%A5%BF%E8%A2%AB%E7%A7%B0%E9%80%9A%E5%85%B1&Refer=top) 862380
+6. [北京新增确诊为奥密克戎](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E6%96%B0%E5%A2%9E%E7%A1%AE%E8%AF%8A%E4%B8%BA%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 799366
+7. [广州天河排除一起核酸检测结果异常](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E5%B7%9E%E5%A4%A9%E6%B2%B3%E6%8E%92%E9%99%A4%E4%B8%80%E8%B5%B7%E6%A0%B8%E9%85%B8%E6%A3%80%E6%B5%8B%E7%BB%93%E6%9E%9C%E5%BC%82%E5%B8%B8%23&Refer=top) 611545
+8. [正佳广场](https://s.weibo.com//weibo?q=%23%E6%AD%A3%E4%BD%B3%E5%B9%BF%E5%9C%BA%23&Refer=top) 596600
+9. [女子1100元假币骗残疾老人半扇猪肉](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%901100%E5%85%83%E5%81%87%E5%B8%81%E9%AA%97%E6%AE%8B%E7%96%BE%E8%80%81%E4%BA%BA%E5%8D%8A%E6%89%87%E7%8C%AA%E8%82%89%23&Refer=top) 545609
 10. [00后服务员买70杯热饮送医护](https://s.weibo.com//weibo?q=%2300%E5%90%8E%E6%9C%8D%E5%8A%A1%E5%91%98%E4%B9%B070%E6%9D%AF%E7%83%AD%E9%A5%AE%E9%80%81%E5%8C%BB%E6%8A%A4%23&Refer=top) 521467
 11. [卵巢功能衰退会增加早死风险](https://s.weibo.com//weibo?q=%23%E5%8D%B5%E5%B7%A2%E5%8A%9F%E8%83%BD%E8%A1%B0%E9%80%80%E4%BC%9A%E5%A2%9E%E5%8A%A0%E6%97%A9%E6%AD%BB%E9%A3%8E%E9%99%A9%23&Refer=top) 483616
 12. [5岁女孩疑被后妈烫伤爷爷发声](https://s.weibo.com//weibo?q=%235%E5%B2%81%E5%A5%B3%E5%AD%A9%E7%96%91%E8%A2%AB%E5%90%8E%E5%A6%88%E7%83%AB%E4%BC%A4%E7%88%B7%E7%88%B7%E5%8F%91%E5%A3%B0%23&Refer=top) 472659
@@ -29,7 +29,8 @@
 29. [因封城无法归家的西安女孩被山东舍友接回威海](https://s.weibo.com//weibo?q=%23%E5%9B%A0%E5%B0%81%E5%9F%8E%E6%97%A0%E6%B3%95%E5%BD%92%E5%AE%B6%E7%9A%84%E8%A5%BF%E5%AE%89%E5%A5%B3%E5%AD%A9%E8%A2%AB%E5%B1%B1%E4%B8%9C%E8%88%8D%E5%8F%8B%E6%8E%A5%E5%9B%9E%E5%A8%81%E6%B5%B7%23&Refer=top) 171415
 30. [京昆高速成绵主线发生火灾](https://s.weibo.com//weibo?q=%23%E4%BA%AC%E6%98%86%E9%AB%98%E9%80%9F%E6%88%90%E7%BB%B5%E4%B8%BB%E7%BA%BF%E5%8F%91%E7%94%9F%E7%81%AB%E7%81%BE%23&Refer=top) 162211
 31. [踩着门禁点回家的小猫咪](https://s.weibo.com//weibo?q=%23%E8%B8%A9%E7%9D%80%E9%97%A8%E7%A6%81%E7%82%B9%E5%9B%9E%E5%AE%B6%E7%9A%84%E5%B0%8F%E7%8C%AB%E5%92%AA%23&Refer=top) 156503
-32. [北京人算是把碳水吃明白了](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E4%BA%BA%E7%AE%97%E6%98%AF%E6%8A%8A%E7%A2%B3%E6%B0%B4%E5%90%83%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 144838
-33. [LNG战胜RA](https://s.weibo.com//weibo?q=%23LNG%E6%88%98%E8%83%9CRA%23&Refer=top) 124035
-34. [TTG](https://s.weibo.com//weibo?q=TTG&Refer=top) 123912
-35. [TTG一年三亚](https://s.weibo.com//weibo?q=%23TTG%E4%B8%80%E5%B9%B4%E4%B8%89%E4%BA%9A%23&Refer=top) 123589
+32. [深圳1月15日暂无新增病例](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B31%E6%9C%8815%E6%97%A5%E6%9A%82%E6%97%A0%E6%96%B0%E5%A2%9E%E7%97%85%E4%BE%8B&Refer=top) 155779
+33. [北京人算是把碳水吃明白了](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E4%BA%BA%E7%AE%97%E6%98%AF%E6%8A%8A%E7%A2%B3%E6%B0%B4%E5%90%83%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 144838
+34. [LNG战胜RA](https://s.weibo.com//weibo?q=%23LNG%E6%88%98%E8%83%9CRA%23&Refer=top) 124035
+35. [TTG](https://s.weibo.com//weibo?q=TTG&Refer=top) 123912
+36. [TTG一年三亚](https://s.weibo.com//weibo?q=%23TTG%E4%B8%80%E5%B9%B4%E4%B8%89%E4%BA%9A%23&Refer=top) 123589
