--- a/result/2022-01-16.md
+++ b/result/2022-01-16.md
@@ -34,3 +34,6 @@
 34. [LNG战胜RA](https://s.weibo.com//weibo?q=%23LNG%E6%88%98%E8%83%9CRA%23&Refer=top) 124035
 35. [TTG](https://s.weibo.com//weibo?q=TTG&Refer=top) 123912
 36. [TTG一年三亚](https://s.weibo.com//weibo?q=%23TTG%E4%B8%80%E5%B9%B4%E4%B8%89%E4%BA%9A%23&Refer=top) 123589
+37. [日本海啸](https://s.weibo.com//weibo?q=%E6%97%A5%E6%9C%AC%E6%B5%B7%E5%95%B8&Refer=top) 75905
+38. [王立科送给孙力军9000多万小海鲜](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E7%AB%8B%E7%A7%91%E9%80%81%E7%BB%99%E5%AD%99%E5%8A%9B%E5%86%9B9000%E5%A4%9A%E4%B8%87%E5%B0%8F%E6%B5%B7%E9%B2%9C%23&Refer=top) 62884
+39. [曼联2比2维拉](https://s.weibo.com//weibo?q=%23%E6%9B%BC%E8%81%942%E6%AF%942%E7%BB%B4%E6%8B%89%23&Refer=top) 41136
