--- a/result/2022-01-17.md
+++ b/result/2022-01-17.md
@@ -40,3 +40,4 @@
 40. [反腐大片零容忍第二集](https://s.weibo.com//weibo?q=%23%E5%8F%8D%E8%85%90%E5%A4%A7%E7%89%87%E9%9B%B6%E5%AE%B9%E5%BF%8D%E7%AC%AC%E4%BA%8C%E9%9B%86%23&Refer=top) 143007
 41. [敛财超4.5亿元他自述贪欲登峰造极](https://s.weibo.com//weibo?q=%23%E6%95%9B%E8%B4%A2%E8%B6%854.5%E4%BA%BF%E5%85%83%E4%BB%96%E8%87%AA%E8%BF%B0%E8%B4%AA%E6%AC%B2%E7%99%BB%E5%B3%B0%E9%80%A0%E6%9E%81%23&Refer=top) 142983
 42. [JTeam夺得劫杯冠军](https://s.weibo.com//weibo?q=%23JTeam%E5%A4%BA%E5%BE%97%E5%8A%AB%E6%9D%AF%E5%86%A0%E5%86%9B%23&Refer=top) 118669
+43. [黄明昊在新鲜市开滑雪屋](https://s.weibo.com//weibo?q=%23%E9%BB%84%E6%98%8E%E6%98%8A%E5%9C%A8%E6%96%B0%E9%B2%9C%E5%B8%82%E5%BC%80%E6%BB%91%E9%9B%AA%E5%B1%8B%23&Refer=top) 84629
